--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "vuepress": "^1.5.1"
   },
   "scripts": {
-    "docs:dev": "vuepress dev docs",
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs",
     "docs:build": "vuepress build docs",
     "deploy": "bash deploy.sh"
   }
